--- a/css/main.css
+++ b/css/main.css
@@ -224,16 +224,20 @@ a {
 
 .first-box-section {
     margin-top: 100px;
+    
 }
+
 
 .box-wrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: #f7f8fb;
 }
 
 .box-item {
     max-width: 50%;
+    background-color: #f7f8fb;
 }
 
 .box-item h2 {
